--- a/various/various01/package.json
+++ b/various/various01/package.json
@@ -11,7 +11,9 @@
     "pondjs": "^0.9.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.2",
+    "react-select": "^4.1.0",
     "react-timeseries-charts": "^0.16.1",
     "web-vitals": "^1.1.0"
   },
