--- a/various/various01/package.json
+++ b/various/various01/package.json
@@ -10,8 +10,10 @@
     "node-sass": "^5.0.0",
     "pondjs": "^0.9.0",
     "react": "^17.0.1",
+    "react-component-component": "^1.2.1",
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.2",
+    "react-google-charts": "^3.0.15",
     "react-scripts": "4.0.2",
     "react-select": "^4.1.0",
     "react-timeseries-charts": "^0.16.1",
