--- a/various/various01/package.json
+++ b/various/various01/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "chart.js": "^2.9.4",
     "d3": "^6.5.0",
     "node-sass": "^5.0.0",
     "pondjs": "^0.9.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-component-component": "^1.2.1",
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.2",
