--- a/various/various01/package.json
+++ b/various/various01/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^2.9.4",
     "d3": "^6.5.0",
     "node-sass": "^5.0.0",
+    "plotly.js": "^1.58.4",
     "pondjs": "^0.9.0",
     "react": "^17.0.1",
     "react-chartjs-2": "^2.11.1",
@@ -18,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.2",
     "react-google-charts": "^3.0.15",
+    "react-plotly.js": "^2.5.1",
     "react-scripts": "4.0.2",
     "react-select": "^4.1.0",
     "react-timeseries-charts": "^0.16.1",
